--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "temp-33233",
    "version": "0.1.1-beta.2",
-   "description": "A great collection of React utility hooks",
+   "description": "A great collection of React utility hooks.",
    "keywords": [
       "temp-33233"
    ],
