--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "temp-33233",
-   "version": "0.1.1-beta.4",
+   "version": "0.1.1",
    "description": "A great collection of React utility hooks.",
    "keywords": [
       "temp-33233"
