--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
               node-version: 16.x
               cache: 'pnpm'
 
-         - run: pnpm install --no-frozen-lockfile
+         - run: pnpm install --frozen-lockfile
          - run: pnpm run type-check && pnpm run build
