--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
               node-version: ${{ matrix.node }}
               cache: 'pnpm'
 
-         - run: pnpm install --no-frozen-lockfile
+         - run: pnpm install --frozen-lockfile
 
          - name: Create Release Pull Request or Publish
            id: changesets
